cluster/apps/default/firefly-iii/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  namespace: default
spec:
  selector:
    matchLabels:
      app: firefly-iii
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
        - image: fireflyiii/core:version-5.7.6
          name: firefly-iii
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firefly-iii-uploads
              mountPath: /var/www/html/storage/upload
      volumes:
        - name: firefly-iii-uploads
          persistentVolumeClaim:
            claimName: firefly-iii-uploads-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-db
  namespace: default
spec:
  selector:
    matchLabels:
      app: firefly-iii-db
  template:
    metadata:
      labels:
        app: firefly-iii-db
    spec:
      containers:
        - image: postgres:14.4-alpine
          name: firefly-iii-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: firefly-iii-db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: firefly-iii-db
          persistentVolumeClaim:
            claimName: firefly-iii-db-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii-cron
  namespace: default
spec:
  selector:
    matchLabels:
      app: firefly-iii-cron
  template:
    metadata:
      labels:
        app: firefly-iii-cron
    spec:
      containers:
        - image: alpine:latest
          name: firefly-iii-cron
          command:
            - "/bin/sh"
          args:
            - "-c"
            - 'echo "0 3 * * * wget -qO- http://firefly-iii:8080/api/v1/cron/$(CRON_TOKEN)" | crontab - && crond -f -L /dev/stdout'
