cluster/apps/default/firefly-iii/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "networking-local-only@kubernetescrd"
    # traefik.ingress.kubernetes.io/router.middlewares: "default-ak-outpost-embedded@kubernetescrd"
    # external-dns/is-public: "true"
spec:
  ingressClassName: "traefik"
  rules:
    - host: "firefly.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-iii
                port:
                  number: 8080
